@@ -165,47 +165,6 @@
                 </executions>
             </plugin>
             
-            <!--JPackage Plugin-->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>jpackage</executable>
-                            <arguments>
-                                <argument>--type</argument>
-                                <argument>exe</argument>
-                                <argument>--input</argument>
-                                <argument>${project.build.directory}</argument>
-                                <argument>--name</argument>
-                                <argument>Terminal-Takedown</argument>
-                                <argument>--main-jar</argument>
-                                <argument>${project.artifactId}-${project.version}.jar</argument>
-                                <argument>--main-class</argument>
-                                <argument>${main.class}</argument>
-                                <argument>--icon</argument>
-                                <argument>C:\Users\Kheagen\Pictures\icons\ico\Mario.ico</argument>
-                                <argument>--app-version</argument>
-                                <argument>0.0.1</argument>
-                                <argument>--win-dir-chooser</argument>
-                                <argument>--win-menu</argument>
-                                <argument>--win-shortcut</argument>
-                                <argument>--module-path</argument>
-                                <argument>${project.build.directory};C:\Program Files\Java\javafx-jmods</argument>
-                                <argument>--add-modules</argument>
-                                <argument>javafx.controls,javafx.fxml</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            
         </plugins>
     </build>
     <name>TerminalTakedown_JavaFX</name>
